<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/login_bar" />

    <ImageView
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/login_image"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <EditText
        android:id="@+id/admin_edit"
        android:layout_marginTop="240dp"
        android:inputType="text"
        android:hint="@string/admin"
        android:layout_centerHorizontal="true"
        android:layout_width="242dp"
        android:layout_height="41dp" />
    <EditText
        android:id="@+id/pwd_edit"
        android:inputType="textPassword"
        android:layout_marginTop="300dp"
        android:hint="@string/pawrd"
        android:layout_centerHorizontal="true"
        android:layout_width="242dp"
        android:layout_height="41dp" />

        <Button
            android:id="@+id/login_button"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:layout_marginTop="350dp"
            android:textSize="20dp"
            android:background="@drawable/login_button_state"
            android:layout_centerHorizontal="true"
            android:layout_width="305dp"
            android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <View
            android:id="@+id/line_view"
            android:layout_centerInParent="true"
            android:layout_width="1dp"
            android:background="#d3d3d3"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/sign_up_text"
            android:text="@string/sign_up"
            android:layout_centerVertical="true"
            android:layout_alignRight="@id/line_view"
            android:layout_width="80dp"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/forget_pwd_text"
            android:text="@string/forget_pwd"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@id/line_view"
            android:gravity="center"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>
