<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp">

    <RelativeLayout
        android:id="@+id/main_relative"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
    <ImageView
        android:id="@+id/main_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="3dp"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/main_unfocus"/>

        <TextView
            android:text="@string/main"
            android:textSize="10sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/area_relative"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/area_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/area_unfocus"/>

        <TextView
            android:text="@string/area"
            android:textSize="10sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/plant_relative"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/plant_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/plant_unfocus"/>

        <TextView
            android:text="@string/plant"
            android:textSize="10sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/personal_relative"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/personal_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/personal_unfocus"/>

        <TextView
            android:text="@string/personal"
            android:textSize="10sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</LinearLayout>
