<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/plant_card"
    tools:targetApi="lollipop"
    android:layout_width="match_parent"
    android:layout_height="286dp"
    android:stateListAnimator="@drawable/lift_on_touch"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/plant_pic_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@mipmap/plant_example"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/plant_name_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="86dp">

            <View
                android:layout_gravity="center_horizontal"
                android:background="#d3d3d3"
                android:layout_width="300dp"
                android:layout_height="1dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <TextView
                android:id="@+id/plant_descripe_text"
                android:gravity="center"
                android:text="@string/description"
                android:lines="2"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <TextView
                    android:id="@+id/plant_type_text"
                    android:gravity="center"
                    android:text="@string/plant_type"
                    android:layout_width="100dp"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/plant_season_text"
                    android:gravity="center"
                    android:layout_marginLeft="100dp"
                    android:text="@string/plant_season"
                    android:layout_width="100dp"
                    android:layout_height="30dp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

